# pydantic-ai-web-models

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  zensical.toml
.github/workflows/: ci.yml  docs.yml  publish-pypi.yml
docs/: architecture.md  configuration.md  getting-started.md  index.md
docs/api/: exceptions.md  index.md  temporal-config.md  web-model.md
docs/guides/: comparing-models.md  conversations.md  index.md  structured-output.md  text-responses.md
src/pydantic_ai_web_models/: __init__.py  config.py  exceptions.py  messages.py  model.py  registration.py  structured.py
tests/: conftest.py  test_config.py  test_exceptions.py  test_messages.py  test_model.py  test_registration.py  test_structured.py
