[project]
name = "pydantic-ai-web-models"
version = "0.1.0"
description = "A lightweight Pydantic AI model provider that routes requests to web-based LLMs (OpenAI, Google) through Temporal workflows."
readme = "README.md"
authors = [
    { name = "Eugene Galenko" }
]
requires-python = ">=3.11"
dependencies = [
    "pydantic-ai>=1.73.0",
    "pydantic-settings>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.15.8",
    "zensical>=0.0.30",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
